# Emergence

./: .gitignore  CMakeLists.txt  INSTALL.txt  README.md
Sheep/: savestate00.txt
Sheep/src/: apple.h  apple.hpp  backpack.h  binding.h  clientconnection.cpp  clientconnection.h  clientconnection.hpp  clientmanager.cpp  clientmanager.h  clientmanager.hpp  container.h  door.h  entities.h  entities.hpp  entity.cpp  entity.h  entity.hpp  human.cpp  human.h  key.h  key.hpp  rabbit.cpp  rabbit.h  rabbit.hpp  rock.h  server_main.cpp  sword.h  sword.hpp  temp_sprite.h  temp_sprite.hpp  world.cpp  world.h  world.hpp  worldposition.h
Wolf/data/: apple.xcf  grass_overlay.xcf  sheep.xcf
Wolf/src/: client.cpp  client.h  client_main.cpp  graphics.cpp  graphics.h  oglconsole.h  sprite.cpp  sprite.h
client/: CMakeLists.txt
client/data/: backpack.xcf  bunny.xcf  door.xcf  grass.xcf  sword.xcf
client/src/: client.cpp  client.hpp  client_main.cpp  graphics.cpp  graphics.hpp  oglconsole.c  sprite.cpp  sprite.hpp
server/: CMakeLists.txt
server/data/: world.txt
server/src/: apple.hpp  backpack.hpp  binding.hpp  clientconnection.cpp  clientconnection.hpp  clientmanager.cpp  clientmanager.hpp  container.hpp  door.hpp  entity.cpp  entity.hpp  human.cpp  human.hpp  key.hpp  rabbit.cpp  rabbit.hpp  rock.hpp  server_main.cpp  sword.hpp  temp_sprite.hpp  world.cpp  world.hpp  worldposition.hpp
